--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
+    "clean": "rm -r app/js/*",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
