--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.13",
+    "bootstrap": "^3.3.6",
     "systemjs": "0.19.25",
     "es6-shim": "^0.35.0",
+    "jquery": "^2.2.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6"
